fix gap for all widgets

--- a/src/components/coins/Coins.module.css
+++ b/src/components/coins/Coins.module.css
@@ -1,7 +1,7 @@
 .coins {
     display: flex;
     align-items: center;
-    gap: 5px
+    gap: 10px;
 }
 
 .coinsNumber {
