--- a/src/components/fuel/Fuel.module.css
+++ b/src/components/fuel/Fuel.module.css
@@ -3,6 +3,7 @@
     height: 50px;
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 .fuelIcon {
