--- a/src/components/rockets/Rockets.module.css
+++ b/src/components/rockets/Rockets.module.css
@@ -1,7 +1,7 @@
 .rockets {
     display: flex;
     align-items: center;
-    gap: 5px
+    gap: 10px
 }
 
 .rocketsNumber {
